# advent-of-code

./: .gitignore  README.md  pyproject.toml
2020/day01/: solve.py
2020/day02/: solve.py
2020/day03/: solve.py
2020/day04/: solve.py
2020/day05/: solve.py
2020/day06/: solve.py
2020/day07/: solve.py
2020/day08/: solve.py
2020/day09/: solve.py
2020/day10/: solve.py
2020/day11/: solve.py
2020/day12/: solve.py
2020/day13/: solve.py
2020/day14/: solve.py
2020/day15/: solve.py
2020/day16/: solve.py
2020/day17/: solve.py
2020/day18/: solve.py
2021/day01/: solve.py
2021/day02/: solve.py
2021/day03/: solve.py
2021/day04/: solve.py
2021/day05/: solve.py
2021/day06/: solve.py
2021/day07/: solve.py
2021/day08/: solve.py
2021/day09/: solve.py
2021/day10/: solve.py
2021/day11/: solve.py
2021/day12/: solve.py
2021/day13/: solve.py
2021/day14/: solve.py
2021/day15/: solve.py
2021/day16/: solve.py
2021/day17/: solve.py
2021/day18/: solve.py
2021/day19/: day19.py
2021/day20/: day20.py
2021/day21/: day21.py  solve.py
2021/day22/: day22.py
utils/: aoc_base.py
