[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = "Solutions for the Advent of Code"
authors = ["Marcel Pichler <marcel.pichler@outlook.at>"]
readme = "README.md"
packages = [{include = "advent_of_code"}]

[tool.poetry.dependencies]
python = "^3.10"
advent-of-code-data = "^1.3.2"
numpy = "^1.23.0"
nographs = "^3.0.1"
networkx = "^3.0"
parse = "^1.19.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
